syntax = "proto3";

option csharp_namespace = "DatabaseExtension.Proto";

package DatabaseExtension;

import "google/protobuf/wrappers.proto";

message SortFilter {
    google.protobuf.StringValue ColumnName = 1;
    google.protobuf.BoolValue IsDescending  = 2;
}
